Profile: Fix missing toast notifications on mobile (#1089)

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -164,13 +164,13 @@ $color-user-8: #faa774;
   }
 
   --z-ui-loader-mask: 2000;
+  --z-notification: 1000;
   --z-right-column: 900;
   --z-header-menu: 990;
   --z-header-menu-backdrop: 980;
   --z-modal: 1000;
   --z-media-viewer: 1500;
   --z-drop-area: 55;
-  --z-notification: 50;
   --z-animation-fade: 50;
   --z-menu-bubble: 21;
   --z-menu-backdrop: 20;
